<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E-Health</string>

    <!-- Page de connexion -->
    <string name="prompt_id">Identifiant</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in_short">Valider</string>
    <string name="connect">Se Connecter</string>
    <string name="add_doctor">Nouveau Médecin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordCheck">Confirm password</string>
    <string name="auth">Authentification pass</string>
    <string name="register">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="menu_popup_remove">Supprimer</string>
    <string name="menu_alerts">Voir les alertes</string>
    <string name="button_bluetooth">Bluetooth</string>
    <string name="button_A">Airflow</string>
    <string name="button_B">Pouls</string>
    <string name="button_C">Conductivity</string>
    <string name="button_O">SPO2</string>
    <string name="button_P">Position</string>
    <string name="button_R">Résistance</string>
    <string name="button_T">Température</string>
    <string name="debuggable">true</string>
    <string name="goToChart">Charts</string>
    <string name="measuresLabel">Measures</string>
    <string name="measuresGraphicalActivity">Measures graphical activity</string>
    <string name="alerts_list_empty">Aucune alerte n\'a été détectée.</string>
    <string name="actions_settings">Settings</string>
    <string name="title_activity_patient_registration">PatientRegistrationActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_doctor_registration">DoctorRegistrationActivity</string>
    <string name="menu_add_patient">Add patient</string>
    <string name="cancel">Cancel</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="lastname">LastName</string>
    <string name="firstname">FirstName</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="imageSplash">SplashImage</string>
    

</resources>
