<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >
      
      <EditText
        android:id="@+id/lastname"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstname"
		android:layout_below="@+id/firstname"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="text" />
     
     <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lastname"
		android:layout_below="@+id/lastname"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />
    
    <EditText
        android:id="@+id/passwordCheck"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/password"
        android:ems="10"
        android:hint="@string/passwordCheck"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="text"
        android:paddingBottom="5dp" />

</RelativeLayout>
