<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >
    
    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:background="@drawable/background" >
        
        <RelativeLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:src="@drawable/doc" />
	
	        <TextView
	            android:id="@+id/title"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:layout_marginLeft="14dp"
	            android:layout_toRightOf="@+id/imageView1"
	            android:textSize="25sp" />
	        
	   </RelativeLayout>

    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/barre"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl1"
        android:background="@color/header" >
    </RelativeLayout>
    
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl1" >
    
        <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_width="259dp"
            android:orientation="vertical"
        	android:layout_gravity="center_horizontal" >

            <RelativeLayout
                android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	        	
	        	<ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icone_id" />
	        	
	        	<EditText
		        	android:id="@+id/username"
		        	android:layout_width="250dp"
		        	android:layout_height="wrap_content"
		        	android:layout_alignParentTop="true"
		        	android:layout_centerHorizontal="true"
		        	android:ems="10"
		        	android:hint="@string/username"
		        	android:inputType="text"
		        	android:paddingBottom="5dp" />
	        
	        </RelativeLayout>
	        
            <RelativeLayout
                android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	        	
	        	<ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icone_mdp" />
	        	
	        	<EditText
			        android:id="@+id/password"
			        android:layout_width="250dp"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:hint="@string/password"
			        android:inputType="textPassword" />
	        
	        </RelativeLayout>
	        
            <RelativeLayout
                android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	        	
	        	<ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icone_mdp" />
	        	
	        	<EditText
			        android:id="@+id/passwordCheck"
			        android:layout_width="250dp"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:hint="@string/passwordCheck"
			        android:inputType="textPassword" />
	        
	        </RelativeLayout>
	        
            <RelativeLayout
                android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	        	
	        	<ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icone_mdp" />
	        	
	        	<EditText
			        android:id="@+id/auth"
			        android:layout_width="250dp"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:hint="@string/auth"
			        android:inputType="textPassword" />
	        
	        </RelativeLayout>
	        
            <Button
		        android:id="@+id/register"
		        android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/background_green_button"
		        android:text="@string/register"
		        android:textColor="#FFFFFF"
                android:textStyle="bold" />
		
		</LinearLayout>
    
    </ScrollView>    
    
    <SurfaceView
        android:id="@+id/surfaceView1"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" 
        android:background="@color/pied" />

</RelativeLayout>
