<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context="enseirb.t3.e_health.activity.AuthentificationActivity" >
    
    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:background="@drawable/background" >
        
        <RelativeLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:src="@drawable/connect" />
	
	        <TextView
	            android:id="@+id/title"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:layout_marginLeft="14dp"
	            android:layout_toRightOf="@+id/imageView1"
	            android:textSize="25sp" />
	        
	   </RelativeLayout>

    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/barre"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl1"
        android:background="@color/header" >
    </RelativeLayout>
    
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl1" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_width="259dp"
            android:orientation="vertical"
        	android:layout_gravity="center_horizontal" >

            <RelativeLayout
                android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	            
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icone_id" />
	            
                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_id"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
                
            </RelativeLayout>
            
            <RelativeLayout
                android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	            
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/icone_mdp" />
	            
                <EditText
	                android:id="@+id/password"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:hint="@string/prompt_password"
	                android:imeActionId="@+id/login"
	                android:imeActionLabel="@string/action_sign_in_short"
	                android:imeOptions="actionUnspecified"
	                android:inputType="textPassword"
	                android:maxLines="1"
	                android:singleLine="true" />
                
            </RelativeLayout>
            
            <!--  <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textSize="10sp"
                android:text="J'ai oublié mon mot de passe"/> -->
            
            <Button
                android:id="@+id/connexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/background_green_button"
                android:text="@string/connect"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
    
    <SurfaceView
        android:id="@+id/surfaceView1"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" 
        android:background="@color/pied" />
</RelativeLayout>